apps/base/home-assistant/endpoints.yml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
subsets:
  - addresses:
      - ip: 192.168.21.168
    ports:
      - port: 8123
        name: http
