apps/base/home-assistant/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - name: traefik
      namespace: infrastructure 
      sectionName: internal-https
  rules:
    - backendRefs:
        - name: nextcloud
          port: 80
